--- a/src/static/landing/landing.css
+++ b/src/static/landing/landing.css
@@ -200,159 +200,75 @@ a:link{
     font-size: 1.5rem;
     color: #fff;
     z-index: 9001;
-    /*position: absolute;
-     *     top: 50%;
-     *         left: 50%;
-     *           transform: translate(-50%, -50%);*/
-  white-space: nowrap;
-  color: #fff;
-  border: #fff solid 0.2rem;
-  padding: 0.7rem;
-}
-
-.button {
-  display: none;
-  /*position: absolute;*/
-  /*left: 50%;
-   *     top: 40%;*/
-  /*height: 2.5rem;
-   *     padding-top: 1.3rem;
-   *         width: 15rem;
-   *             text-align: center;
-   *                 */
-  /* color: #fff;
-   *     border: #fff solid 0.2rem;
-   *         font-size: 1rem;
-   *             font-weight: bold;
-   *                 text-transform: uppercase;
-   *                     text-decoration: none;*/
-  /*
-   *     transform: translateX(-50%);*/
-}
-
-.container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: var(--container-bg-color);
-}
-
-.split {
-  /*position: absolute;*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 33%;
-  overflow: hidden;
-}
-
-.split.left {
-  background: url('https://images.pexels.com/photos/46274/pexels-photo-46274.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center center no-repeat;
-  background-size: cover;
-}
-
-
-.split.left:before {
-  position:absolute;
-  content: "";
-  width: 100%;
-  height: 33%;
-  background: var(--left-bg-color);
-}
-
-
-.split.middle {
-  /*
-   *     top: 50%;
-   *         left: 50%;
-   *             transform: translate(-50%, -50%);*/
-  background: url('https://image.ibb.co/m3ZbRb/programmer.png') center center no-repeat;
-  background-size: cover;
-}
-
-
-.split.middle:before {
-  position:absolute; 
-  content: "";
-  width: 100%;
-  height: 33%;
-  background: var(--middle-bg-color);
-}
-
-
-.split.right {
-  background: url('http://aswadgroup.com/wp-content/uploads/2018/05/636311326049773956-UC.jpg') center center no-repeat;
-  background-size: cover;
-}
-
-.split.right:before {
-  position:absolute;
-  content: "";
-  width: 100%;
-  height: 33%;
-  background: var(--right-bg-color);
-}
-
-/*
- *
- *   .split.left, .split.right, .split.middle:before, .split.middle, .split.right:before, .split.left:before {
- *       transition: var(--speed) all ease-in-out;
- *         }
- *
- *           .hover-left .left {
- *               width: var(--hover-width);
- *                 }
- *
- *                   .hover-left .middle {
- *                       width: var(--hover-width);
- *                         }
- *
- *                           .hover-left .right {
- *                               width: var(--other-width);
- *                                 }
- *
- *                                   .hover-left .middle:before .right:before {
- *                                       z-index: 20;
- *                                         }
- *
- *                                           .hover-middle .middle {
- *                                               width: 33%;
- *                                                 }
- *
- *                                                   .hover-middle .left {
- *                                                       width: 34%;
- *                                                         }
- *
- *                                                           .hover-middle .right {
- *                                                               width: 33%;
- *                                                                 }
- *
- *                                                                   .hover-middle .left:before .right:before {
- *                                                                       z-index: 20;
- *                                                                         }
- *
- *                                                                           .hover-right .right {
- *                                                                               width: var(--hover-width);
- *                                                                                 }
- *
- *                                                                                   .hover-right .middle {
- *                                                                                       width: var(--hover-width);
- *                                                                                         }
- *
- *                                                                                           .hover-right .left {
- *                                                                                               width: var(--other-width);
- *                                                                                                 }
- *
- *                                                                                                   .hover-right .left:before .middle:before {
- *                                                                                                       z-index: 20;
- *                                                                                                         }
- *                                                                                                           */
-
-}
-
-@media(max-height: 700px) {
-  .button {
-    top: 70%;
+    white-space: nowrap;
+    color: #fff;
+    border: #fff solid 0.2rem;
+    padding: 0.7rem;
   }
+
+  .button {
+    display: none;
+  }
+
+  .container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: var(--container-bg-color);
+  }
+
+  .split {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 33%;
+    overflow: hidden;
+  }
+
+  .split.left {
+    background: url('book.jpeg') center center no-repeat;
+    background-size: cover;
+  }
+
+
+  .split.left:before {
+    position:absolute;
+    content: "";
+    width: 100%;
+    height: 33%;
+    background: var(--left-bg-color);
+  }
+
+
+  .split.middle {
+    background: url('code.png') center center no-repeat;
+    background-size: cover;
+    height: 34%;
+  }
+
+
+  .split.middle:before {
+    position:absolute; 
+    content: "";
+    width: 100%;
+    height: 34%;
+    background: var(--middle-bg-color);
+  }
+
+
+  .split.right {
+    background: url('construction.jpg') center center no-repeat;
+    background-size: cover;
+  }
+
+  .split.right:before {
+    position:absolute;
+    content: "";
+    width: 100%;
+    height: 33%;
+    background: var(--right-bg-color);
+  }
+
+
 }
