--- a/src/static/landing/landing.css
+++ b/src/static/landing/landing.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 :root {
   --container-bg-color: #333;
   --left-bg-color: rgba(223, 39, 39, 0.7);
@@ -17,10 +19,9 @@
 html, body, #root {
   padding:0;
   margin:0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  text-rendering: optimizeLegibility;
 }
 
 a:link{
@@ -46,7 +47,7 @@ a:link{
 
 @media(min-width: 801px) {
 
-  h1 {
+  h1.landing {
     font-size: 2.5rem;
     color: #fff;
     position: absolute;
@@ -79,6 +80,8 @@ a:link{
     width: 100%;
     height: 100%;
     background: var(--container-bg-color);
+    font-family: 'Roboto', sans-serif;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
 
   .split {
@@ -196,7 +199,7 @@ a:link{
 /* Small Screen */
 
 @media(max-width: 800px) {
-  h1 {
+  h1.landing {
     font-size: 1.5rem;
     color: #fff;
     z-index: 9001;
@@ -215,6 +218,8 @@ a:link{
     width: 100%;
     height: 100%;
     background: var(--container-bg-color);
+    font-family: 'Roboto', sans-serif;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
 
   .split {
