--- a/src/static/project/banner.css
+++ b/src/static/project/banner.css
@@ -25,7 +25,7 @@
   justify-content: center;
   width: 90%;
   margin: 0 auto;
-  padding: 10px 40px;
+  padding: 10px 40px 10px 40px;
   box-sizing: border-box;
 }
 
@@ -36,6 +36,7 @@
 .at-banner__text {
   margin: 0 20px 0 0;
 }
+
 .at-banner__button {
   display: inline-block;
   background: #FFFFFF;
@@ -94,3 +95,14 @@
     transform: translateY(0%);
   }
 }
+
+@media only screen and (max-width: 800px) {
+  .at-banner__text {
+    margin: 0 5px 0 0;
+  }  
+  .at-banner__content {
+    padding: 10px 18px 10px 0px;
+  }
+}
+
+
