--- a/src/static/project/banner.css
+++ b/src/static/project/banner.css
@@ -101,7 +101,8 @@
     margin: 0 5px 0 0;
   }  
   .at-banner__content {
-    padding: 10px 18px 10px 0px;
+    padding: 10px 4px 10px 0px;
+    margin-left: 0;
   }
 }
 
