--- a/src/static/landing/landing.css
+++ b/src/static/landing/landing.css
@@ -2,12 +2,12 @@
 
 :root {
   --container-bg-color: #333;
-  --left-bg-color: rgba(223, 39, 39, 0.7);
-  --left-button-hover-color: rgba(161, 11, 11, 0.3);
+  --left-bg-color: rgba(204, 0, 0, 0.7);
+  --left-button-hover-color: rgba(255, 102, 102, 0.3);
   --middle-bg-color: rgba(43, 43, 43, 0.8);
   --middle-button-hover-color: rgba(92, 92, 92, 0.3);
-  --right-bg-color: rgba(223, 223, 108, 0.8);
-  --right-button-hover-color: rgba(255, 255, 0, 0.3);
+  --right-bg-color: rgba(0, 76, 153, 0.8);
+  --right-button-hover-color: rgba(51, 153, 255, 0.3);
   --hover-width: 50%;
   --other-width: 25%;
   --other-other-width: 25%;
@@ -86,13 +86,17 @@ a:link{
 
   .split {
     position: absolute;
-    width: 33%;
+    width: 50%;
     height: 100%;
     overflow: hidden;
   }
 
   .split.left {
-    width: 34%;
+    width: 25%;
+  }
+
+  .split.right {
+    width: 25%;
   }
 
   .split.left {
@@ -129,7 +133,7 @@ a:link{
 
   .split.right {
     right:0;
-    background: url('construction.jpg') center center no-repeat;
+    background: url('movie.jpg') center center no-repeat;
     background-size: cover;
     z-index: 2;
   }
@@ -163,15 +167,15 @@ a:link{
   }
 
   .hover-middle .middle {
-    width: 33%;
+    width: 50%;
   }
 
   .hover-middle .left {
-    width: 34%;
+    width: 25%;
   }
 
   .hover-middle .right {
-    width: 33%;
+    width: 25%;
   }
 
   .hover-middle .left:before .right:before {
@@ -263,7 +267,7 @@ a:link{
 
 
   .split.right {
-    background: url('construction.jpg') center center no-repeat;
+    background: url('movie.jpg') center center no-repeat;
     background-size: cover;
   }
 
