new functionality to add reviews within the website with Firebase Auth

--- a/src/static/reviews/styles.css
+++ b/src/static/reviews/styles.css
@@ -153,6 +153,25 @@
   text-align: left;
 }
 
+.float{
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom:40px;
+  right:40px;
+  background-color:#0C9;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  box-shadow:1px 1px 2px #999;
+}
+
+.my-float{
+  position:fixed;
+  bottom:60px;
+  right:64px;
+}
+
 .reviewImage {
   max-height: 300px;
 }
