--- a/src/static/landing/landing.css
+++ b/src/static/landing/landing.css
@@ -19,9 +19,9 @@
 html, body, #root {
   padding:0;
   margin:0;
-  width: 100%;
-  height: 100%;
   text-rendering: optimizeLegibility;
+  height: 100%;
+  background-color: #eee;
 }
 
 a:link{
