--- a/src/static/project/styles.css
+++ b/src/static/project/styles.css
@@ -2,15 +2,16 @@
 
 /* global */
 
+/* * { border: 1px solid red; } */
+
 html, body {
-  height: 100%;
-  background: #fcfcfa;
+  background: #eee;
 }
 .hidden {
   display: none;
 }
 .invisible {
-  visibility: hidden;
+  display: none;
   opacity: 0;
   height: 0;
   -webkit-transition-property: opacity 0;
@@ -141,7 +142,6 @@ img.appIcon {
 .projectRowTitle {
   font-size: 25px;
   font-style: italic;
-  background: #fcfcfa;
 }
 
 .hr-text {
@@ -172,13 +172,13 @@ img.appIcon {
   padding: 0 .5em;
   line-height: 1.5em;
   color: black;
-  background-color: #fcfcfa;
+  background-color: #eee;
 }
 
 /* Specific Project */
 
 .specificProject {
-  width: 60%;
+  width: 80%;
   margin: auto;
   position: relative;
   padding-bottom: 5px;
@@ -208,5 +208,26 @@ img.appIcon {
   font-size: 19px;
   color: grey;
 }
-.projectDescription {
+
+.projectPageRoot {
+  min-height: 100%;
+}
+
+.projectsDiv {
+  background-color: #eee;
+}
+
+@media only screen and (min-width: 800px) {
+  body {
+    height: 100%;
+  }
+  .projectPageRoot {
+    background-color: #333;
+  }
+  .projectsDiv {
+    width: 70%;
+    left: 15%;
+    margin: auto;
+    background-color: #eee;
+  }
 }
